Project

General

Profile

Actions

Bug #14689

closed

bootsnap gets object index out of range: 266287972352 (IndexError) since r63113

Bug #14689: bootsnap gets object index out of range: 266287972352 (IndexError) since r63113

Added by yahonda (Yasuo Honda) over 8 years ago. Updated about 7 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.6.0dev (2018-04-16 trunk 63163) [x86_64-linux]
[ruby-core:86548]

Description

Steps to reproduce

$ rbenv install 2.6.0-dev
$ rbenv global 2.6.0-dev
$ git clone https://github.com/Shopify/bootsnap
$ cd bootsnap
$ bundle
$ rake
$ bundle exec bin/testunit

Expected result as of r63112

$ ruby -v
ruby 2.6.0dev (2018-04-07 trunk 63112) [x86_64-linux]
$ bundle exec bin/testunit
... snip ....
# Running:

.....................................................................................................................

Finished in 0.098554s, 1187.1708 runs/s, 2059.7920 assertions/s.

117 runs, 203 assertions, 0 failures, 0 errors, 0 skips
$

Actual result since r63113

$ ruby -v
ruby 2.6.0dev (2018-04-07 trunk 63113) [x86_64-linux]
$ bundle exec bin/testunit
... snip ...
Traceback (most recent call last):
	9: from /home/yahonda/.rbenv/versions/2.6.0-dev_yahonda/lib/ruby/gems/2.6.0/gems/minitest-5.11.3/lib/minitest.rb:63:in `block in autorun'
	8: from /home/yahonda/.rbenv/versions/2.6.0-dev_yahonda/lib/ruby/gems/2.6.0/gems/minitest-5.11.3/lib/minitest.rb:121:in `run'
	7: from /home/yahonda/.rbenv/versions/2.6.0-dev_yahonda/lib/ruby/gems/2.6.0/gems/minitest-5.11.3/lib/minitest.rb:92:in `load_plugins'
	6: from /home/yahonda/.rbenv/versions/2.6.0-dev_yahonda/lib/ruby/gems/2.6.0/gems/minitest-5.11.3/lib/minitest.rb:92:in `each'
	5: from /home/yahonda/.rbenv/versions/2.6.0-dev_yahonda/lib/ruby/gems/2.6.0/gems/minitest-5.11.3/lib/minitest.rb:98:in `block in load_plugins'
	4: from /home/yahonda/.rbenv/versions/2.6.0-dev_yahonda/lib/ruby/gems/2.6.0/gems/minitest-5.11.3/lib/minitest.rb:98:in `require'
	3: from /home/yahonda/git/bootsnap/lib/bootsnap/compile_cache/iseq.rb:37:in `load_iseq'
	2: from /home/yahonda/git/bootsnap/lib/bootsnap/compile_cache/iseq.rb:37:in `fetch'
	1: from /home/yahonda/git/bootsnap/lib/bootsnap/compile_cache/iseq.rb:18:in `storage_to_output'
/home/yahonda/git/bootsnap/lib/bootsnap/compile_cache/iseq.rb:18:in `load_from_binary': object index out of range: 266287972352 (IndexError)
$

iseq.rb:18 executes RubyVM::InstructionSequence.load_from_binary

https://github.com/Shopify/bootsnap/blob/30ac9d332d758d8641e5775541e7b0b2f13bff58/lib/bootsnap/compile_cache/iseq.rb#L18

        RubyVM::InstructionSequence.load_from_binary(binary)

Related issues 1 (0 open1 closed)

Has duplicate Ruby - Bug #16033: test_callinfo_unreachable_path Bus Error on Solaris sparcClosedActions

Updated by nobu (Nobuyoshi Nakada) over 8 years ago Actions #1

  • Status changed from Open to Closed

Applied in changeset trunk|r63167.


compile.c: align range

Updated by yahonda (Yasuo Honda) over 8 years ago Actions #2 [ruby-core:86579]

I have also validated the fix using "ruby 2.6.0dev (2018-04-18 trunk 63186) [x86_64-linux]"
Thank you.

Updated by nobu (Nobuyoshi Nakada) about 7 years ago Actions #3

  • Has duplicate Bug #16033: test_callinfo_unreachable_path Bus Error on Solaris sparc added

Updated by glaubitz (John Paul Adrian Glaubitz) about 7 years ago Actions #4 [ruby-core:94228]

Would it be possible to backport this patch for ruby2.5? Debian has unfortunately not yet updated to 2.6 and the bug affects Debian's sparc64 port.

The patch as-is doesn't apply to the 2.5 tree.

Updated by nagachika (Tomoyuki Chikanaga) about 7 years ago Actions #5

  • Backport changed from 2.3: UNKNOWN, 2.4: UNKNOWN, 2.5: UNKNOWN to 2.3: UNKNOWN, 2.4: UNKNOWN, 2.5: REQUIRED
Actions

Also available in: PDF Atom